--- a/news-app/src/app/news/components/news-list/news-list.component.html
+++ b/news-app/src/app/news/components/news-list/news-list.component.html
@@ -6,7 +6,7 @@
         <div class='row'>
             <div class='col-md-2'>Filter by:</div>
             <div class='col-md-4'>
-                <input type='text' [(ngModel)]='listFilter'/>
+                <input type='text' [(ngModel)]='listFilter' />
             </div>
         </div>
         <div class='row'>
@@ -15,10 +15,11 @@
             </div>
         </div>
         <div class='table-responsive'>
-            <table class='table' *ngIf= 'news && news.length'>
+            <table class='table' *ngIf='news && news.length'>
                 <thead>
                     <tr>
-                        <th>Title</th>         <!--poner algún botón de algo-->
+                        <th>Title</th>
+                        <!--poner algún botón de algo-->
                         <th>Source</th>
                         <th>Author</th>
                         <th>Date</th>
@@ -29,7 +30,8 @@
                         <td>{{ new.title }}</td>
                         <td>{{ new.source }}</td>
                         <td>{{ new.author }}</td>
-                        <td>{{ new.date }}</td>    <!--depende de lo que devuelva la api, usar pipes?-->
+                        <td>{{ new.date }}</td>
+                        <!--depende de lo que devuelva la api, usar pipes?-->
                     </tr>
                 </tbody>
             </table>
