--- a/news-app/src/app/news/components/news-list/news-list.component.html
+++ b/news-app/src/app/news/components/news-list/news-list.component.html
@@ -25,7 +25,7 @@
                         <th>Date</th>
                     </tr>
                 </thead>
-                <tbody *ngIf="filteredNews && filteredNews.length">
+                <tbody *ngIf="filteredNews">
                     <tr *ngFor="let new of filteredNews">
                         <td>{{ new.title }}</td>
                         <td>{{ new.source }}</td>
