--- a/news-app/src/app/app.component.html
+++ b/news-app/src/app/app.component.html
@@ -1,8 +1,13 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+<div>
+    <nav class='navbar navbar-default'>
+        <div class='container-fluid'>
+            <a class='navbar-brand'>{{ pageTitle }}</a>
+            <ul class='nav navbar-nav'>
+                <li><a [routerLink]="['/home']">Home</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class='container'>
+        <router-outlet></router-outlet>
+    </div>
 </div>
-
-
