showing articles details and added news module

--- a/news-app/src/app/news/components/news-list/news-list.component.html
+++ b/news-app/src/app/news/components/news-list/news-list.component.html
@@ -23,12 +23,13 @@
                     </tr>
                 </thead>
                 <tbody *ngIf="filteredNews">
-                    <tr *ngFor="let new of filteredNews">
-                        <td>{{ new.title }}</td>
-                        <td>{{ new.source }}</td>
-                        <td>{{ new.author }}</td>
-                        <td>{{ new.date }}</td>
-                        <!--depende de lo que devuelva la api, usar pipes?-->
+                    <tr *ngFor="let article of filteredNews">
+                        <td>
+                            <a [routerLink]="['/news', article.title]"> {{ article.title }}</a>
+                        </td>
+                        <td>{{ article.source }}</td>
+                        <td>{{ article.author }}</td>
+                        <td>{{ article.date | date: 'medium' }}</td>
                     </tr>
                 </tbody>
             </table>
