--- a/news-app/src/app/app.component.html
+++ b/news-app/src/app/app.component.html
@@ -1,13 +1,14 @@
 <div>
-    <nav class='navbar navbar-default'>
-        <div class='container-fluid'>
-            <a class='navbar-brand'>{{ pageTitle }}</a>
-            <ul class='nav navbar-nav'>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <a class="navbar-brand">{{ pageTitle }}</a>
+            <ul class="nav navbar-nav">
                 <li><a [routerLink]="['/home']">Home</a></li>
+                <li><a [routerLink]="['/news']">News List</a></li>
             </ul>
         </div>
     </nav>
-    <div class='container'>
+    <div class="container">
         <router-outlet></router-outlet>
     </div>
 </div>
