--- a/news-app/src/app/app.component.html
+++ b/news-app/src/app/app.component.html
@@ -1,10 +1,14 @@
 <div>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
+    <nav class="navbar sticky-top navbar-light bg-light">
+        <div class="container">
             <a class="navbar-brand">{{ pageTitle }}</a>
-            <ul class="nav navbar-nav">
-                <li><a [routerLink]="['/home']">Home</a></li>
-                <li><a [routerLink]="['/news']">News List</a></li>
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/home']">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/news']">News List</a>
+                </li>
             </ul>
         </div>
     </nav>
