--- a/news-app/src/app/news/components/home/home.component.html
+++ b/news-app/src/app/news/components/home/home.component.html
@@ -1,3 +1,5 @@
-<div>
-    <h1> Welcome! </h1>
+<div class="card" style="align-items: center; margin-top: 40px;">
+    <div class="card-body">
+        <h1> Welcome! </h1>
+    </div>
 </div>
