some fixing on coding style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,10 @@
             <a class="navbar-brand">{{ pageTitle }}</a>
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/home']">Home</a>
+                    <a [routerLink]="['/home']" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/news']">News List</a>
+                    <a [routerLink]="['/news']" class="nav-link">News List</a>
                 </li>
             </ul>
         </div>
