--- a/src/app/news/components/home/home.component.html
+++ b/src/app/news/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="align-items: center; margin-top: 40px;">
+<div class="card" id="mainCard">
     <div class="card-body">
         <h1> Welcome! </h1>
     </div>
