--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,9 @@
                 <li class="nav-item">
                     <a [routerLink]="['/news']" class="nav-link">News List</a>
                 </li>
+                <li class="nav-item">
+                  <a [routerLink]="['/favorites']" class="nav-link">Favorite News</a>
+              </li>
             </ul>
         </div>
     </nav>
