--- a/src/app/news/components/news-list/news-list.component.html
+++ b/src/app/news/components/news-list/news-list.component.html
@@ -25,7 +25,9 @@
                 <tbody *ngIf="news">
                     <tr *ngFor="let article of news | filter: listFilter">
                         <td scope="row">
-                            <a [routerLink]="['/news', article.title]"> {{ article.title }}</a>
+                            <a [routerLink]="[routerLinkVariable, article.title]"> 
+                              {{ article.title }}
+                            </a>
                         </td>
                         <td>{{ article.source }}</td>
                         <td>{{ article.author }}</td>
